--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,13 +1,8 @@
-@media(max-width: 1024px) {
-    .main {
-        display: block;
-    }
-    .container {
-        flex-direction: column;
-        
+@media(max-width: 1440px) {
+    .pinturas {
+        max-width: 900px;
+        margin: 30px 0;
+        gap: 1px;
     }
 
-    .list-img {
-        flex-direction: column;
-    }
 }
